Add support to update the env file

--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
     "co-compose": "^4.0.0",
     "debug": "^4.1.1",
     "dotenv": "^6.2.0",
+    "dotenv-stringify": "^2.0.1",
     "edge.js": "^1.1.4",
     "eventemitter2": "^5.0.1",
     "haye": "^2.0.2",
+    "lockfile": "^1.0.4",
     "lodash": "^4.17.11",
     "macroable": "^1.0.0",
     "node-cookie": "^2.1.1",
